# Carbon-Footprint-Assistant

./: README.md  agents-cli-0.1.3.tgz  metadata.json  package-lock.json  server.ts  start_server.ps1  vercel.json  vite.config.ts
api/: index.ts
assets/.adk/: session.db
carbon_advisor/: .gitignore  .pre-commit-config.yaml  README.md  agent.py  gate.py  pyproject.toml
carbon_advisor/.adk/: session.db
carbon_advisor/.semgrep/: rules.yaml
carbon_advisor/app/: agent.py
customer_support_agent/.adk/: session.db
semgrep_dummy/: pyproject.toml
semgrep_dummy/semgrep.egg-info/: PKG-INFO  SOURCES.txt
src/: App.tsx  index.css  mockData.ts  types.ts
src/components/: AICaptionGen.tsx  CarbonAssistant.tsx  CarbonScanner.tsx  FootprintAwareness.tsx  GreenFeed.tsx  PhysicalBadges.tsx  PointsBreakupLedger.tsx  ShareCardCreator.tsx
